# agentic-trader

./: .env.example  .gitignore  GITHUB_UPLOAD.md  README.md  pyproject.toml  scratch_api_test.py
.github/workflows/: test.yml
.venv311/: pyvenv.cfg
config/: rules.yaml
docker/: Dockerfile  agentic-trader.service  docker-compose.yaml
scripts/: backfill.py  health_check.py  measure_outcomes.py  param_sweep.py  replay.py  sweep_config.yaml
src/grader/: __init__.py  aggregator.py  context_builder.py  gate0.py  gate1.py  gate1_5.py  gate2.py  gate3.py  grader.py  llm_client.py  main.py  models.py  parser.py  prompt.py  synthesis.py  synthesis_prompt.py
src/replay/: __init__.py  helpers.py  measure.py  runner.py
src/scanner/: __init__.py  main.py  (+1 more)
tests/: conftest.py  test_backtest_integration.py  test_chain_poller.py  test_cleanup.py  test_client.py  test_confluence.py  test_context_builder.py  test_conviction.py  test_db.py  test_dedup.py  test_engine.py  test_filters.py  test_flow_analyst.py  test_flow_ledger.py  test_flow_watcher.py  test_gate0.py  test_gate1_5.py  test_graceful_shutdown.py  test_grader.py  test_grader_models.py  test_guardrails.py  test_health_check.py  test_insider_tracker.py  test_integration.py  test_llm_client.py  test_log_rotation.py  test_monitor_enrichment.py  test_news_watcher.py  test_parser.py  test_portfolio_config.py  test_prompt.py  test_queue.py  test_regrader.py  test_replay_helpers.py  test_risk_analyst.py  test_sector_analyst.py  test_sector_cache.py  test_sentiment_analyst.py  test_sentiment_ctx.py  test_signal_store.py  (+3 more)
(+73 files in other folders)
